Closed Bug 83709 Opened 23 years ago Closed 23 years ago

Image attachments don't display/can't open them, for msgs downloaded for offline use.

Categories

(SeaMonkey :: MailNews: Backend, defect, P2)

defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: laurel, Assigned: Bienvenu)

References

Details

(Whiteboard: [nsbeta1+][PDT+] Have fix)

Attachments

(1 file)

Using may31 commercial trunk build

After downloading messages for offline use and going offline, image attachments
to downloaded messages won't display in the message pane nor can you open them
unless you've viewed them in the session before going offline.

Steps:
1.  IMAP inbox is selected for offline.
2.  Send yourself a message with a .jpg or .gif attachment.  Get the message,
don't view/read the message.
3.  File|Offline|Download/sync now.  Select Mail Messages and Work Offline after
sync completed, click OK.  Inbox messages downloaded for offline, including the
one you sent with attachment.
4.  While offline, select the message with image attachment.  You're able to
view the body of the message, but not the image attached, barber pole progress
indicator just spins.

Note:  Image attachments which have been displayed in the session prior to going
offline are displayed and able to be opened when offline.  Text and html
attachments display fine whether or not they were previously viewed/opened (no
images, though).

Result:  images not displayed when offline for messages downloaded for offline
use.  (In cases I've tried, I have been able to Save the attachment, though.)

Expected:  images to be available and displayed inline for messages downloaded
for offline use.
Keywords: nsbeta1
yes, the way imglib/layout is fetching the images doesn't go through the imap
code that realizes we have the message offline.
moving to 0.9.2
Priority: -- → P2
Whiteboard: [nsbeta1+]
Target Milestone: --- → mozilla0.9.2
Attached patch proposed fixSplinter Review
CC'ing Navin for review. This fix is to catch this code path executed by
imagelib to set the flag on the url that says we have the attachment offline.
Whiteboard: [nsbeta1+] → [nsbeta1+] Have fix
sr=mscott
r=naving
a=blizzard on behalf of drivers for the trunk
Blocks: 83989
adding PDT+. Please check into the trunk as soon as possible.
Whiteboard: [nsbeta1+] Have fix → [nsbeta1+][PDT+] Have fix
fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Using commercial builds
2001-06-14-09-trunk/ win nt 4.0
2001-06-13-08-trunk/ linux 2.2, red hat 7.0 (due to prob w/6-14 builds)
2001-06-14-08-trunk/ mac os 9.0.4

Followed Laurel's steps to reproduce with these attachments:
-gif
-jpeg
-txt
-html

I was able to read/view both the message and attachments while offline
even if I had not initially read the message online.

Marking as verified.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: