fix bug 83709 inline attachments in offline imap messages not displayed while offline r=naving, sr=mscott a=drivers